--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="navbarTogglerDemo01" class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <p class="nav navbar-text navbar-right">Hello, @User.Identity.IsAuthenticated!</p>
+                    <p class="nav navbar-text navbar-right">Hello, @User.Identity.Name!</p>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -47,6 +47,23 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                            <form id="logout" action="@Url.Action("Logout", "Account")" method="POST">
+                                <a href="javascript: $('#logout).submit()" class="last">
+                                    Logout
+                                    <br /><span class="tagline">@User.Identity.Name</span>
+                                </a>
+                            </form>
+                            }
+                            else
+                            {
+                                <a href ="@Url.Action("Login", "Account")" title="log in" class="last">
+                                    Login
+                                </a>
+                            }
                         </li>
                     </ul>
                 </div>
