--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="navbarTogglerDemo01" class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <p class="nav navbar-text navbar-right">Hello!</p>
+                    <p class="nav navbar-text navbar-right"></p>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -51,7 +51,7 @@
                         <li>
                             @if (User.Identity.IsAuthenticated)
                             {
-                            <form id="logout" action="@Url.Action("Logout", "Account")" method="POST">
+                            <form id="logout" action="@Url.Action("Logout", "Home")" method="POST">
                                 <a href="javascript: $('#logout).submit()" class="last">
                                     Logout
                                     <br /><span class="tagline">@User.Identity.Name</span>
@@ -60,7 +60,7 @@
                             }
                             else
                             {
-                                <a href ="@Url.Action("Login", "Account")" title="log in" class="last">
+                                <a href ="@Url.Action("Login", "Home")" title="log in" class="last">
                                     Login
                                 </a>
                             }
